--- a/app.wxss
+++ b/app.wxss
@@ -16,7 +16,7 @@ page{
   color: #2d2e33;
    font-family: 'Arial','Microsoft Yahei', "Helvetica Neue", Helvetica, Tahoma, sans-serif; 
    font-size: 30rpx;
-   margin-bottom:120rpx;
+   padding-bottom:120rpx;
 }
 
 .mg_top30{
@@ -110,7 +110,7 @@ page{
    font-size:24rpx;
    font-weight:bolder;
    color:#5d5f6a;
-   margin-top:13rpx;
+   margin-top:18rpx;
 }
 
 .foot1 image{
