--- a/pages/timeLine/timeLine.wxml
+++ b/pages/timeLine/timeLine.wxml
@@ -1,7 +1,7 @@
 <!--index.wxml-->
 <view class="wrapper">
   <view class="filter-container">
-    <picker mode="date" value="{{year + '-' + month + '-' + date}}" start="2017-01-01" end="2099-12-31" bindchange="bindDateChange" class="filter-date">
+    <picker mode="date" value="{{year + '-' + month + '-' + date}}" start="1970-01-01" end="2099-12-31" bindchange="bindDateChange" class="filter-date">
         <view class="picker">
           <text class="picker-text">{{year}}年{{month}}月</text><view class="picker-icon"></view>
         </view>
@@ -23,7 +23,7 @@
     </view>
 </scroll-view>
 
-<scroll-view class="time-line-container" scroll-y="true" scroll-into-view="{{scrollIntoViewId}}" scroll-with-animation="{{verticalScrollAnim}}" bindscroll="{{onBindScroll}}">
+<scroll-view class="time-line-container" scroll-y="true" scroll-into-view="{{scrollIntoViewId}}" scroll-with-animation="{{verticalScrollAnim}}" bindscroll="{{onBindScroll}}" bindscrolltoupper="onHitTop" style="padding-bottom:{{listPaddingBottom}}rpx">
 
 <view class="time-container">
     <view class="item"><text>日</text></view>
