--- a/pages/myFollows/myFollows.wxss
+++ b/pages/myFollows/myFollows.wxss
@@ -35,11 +35,16 @@
     color: #878a99;
     font-size: 28rpx;
 }
+
 .follow_list .t2 image{
 	width:30rpx;
 	height:30rpx;
     vertical-align: middle;
     margin-right: 10rpx;
+}
+.follow_list .t3 image{
+width:30rpx;
+height:36rpx;
 }
 .f_button button{
   width:180rpx;
@@ -78,4 +83,15 @@
     text-align: center;
     margin: 30rpx auto;
     
+}
+button{
+font-size:30rpx;
+background-color:#eeeff1;
+color:#666666;
+}
+button::after {
+border:none;
+}
+button[disabled] {
+color:#999999;
 }
