--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -183,12 +183,27 @@
     <time class="fr">{{item1.createAt}}</time>
   </view>
   <view class="comment_cont">
-  <block  wx:for="{{item1.content}}" wx:for-item="itemC">
-    <text wx:if="{{itemC.type==1}}">​​{{itemC.value}}</text>
-	<view wx:if="{{itemC.type==2}}">
-		 <image src="{{itemC.value}}" width="100%" height="100%"/> 
-	</view>
-  </block>
+  <!--<block  wx:for="{{item1.content}}" wx:for-item="itemC">-->
+    <view class="comment-text">​​{{item1.content[0].value}}</view>
+
+    <view wx:if="{{item1.picNum == 1}}" class="comment-img-wrap">
+      <image src="{{item1.content[1].value}}" width="100%" height="100%" class="comment-img-item1" mode="aspectFill"/>
+    </view>
+
+    <view wx:if="{{item1.picNum == 2}}" class="comment-img-wrap">
+      <image src="{{item1.content[1].value}}" width="100%" height="100%" class="comment-img-item2" mode="aspectFill"/>
+      <image src="{{item1.content[2].value}}" width="100%" height="100%" class="comment-img-item2" mode="aspectFill"/>
+    </view>
+
+    <view wx:if="{{item1.picNum == 3}}" class="comment-img-wrap">
+      <image src="{{item1.content[1].value}}" width="100%" height="100%" class="comment-img-item3" mode="aspectFill"/>
+      <view class="comment-img-right">
+        <image src="{{item1.content[2].value}}" width="100%" height="100%" class="comment-img-item4" mode="aspectFill"/>
+        <image src="{{item1.content[3].value}}" width="100%" height="100%" class="comment-img-item4 img-clear" mode="aspectFill"/>
+      </view>
+    </view>
+
+  <!--</block>-->
   </view>
   </view>
 </block>
