--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -358,3 +358,53 @@ top:10rpx;
   box-sizing: border-box; 
   overflow-y: hidden;
 }
+
+.comment-text {
+  color: #2d2e33;
+  font-size: 26rpx;
+  line-height: 1.5;
+  margin-bottom: 10rpx;
+  width: 100%;
+}
+
+.comment-img-wrap {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
+  margin-top: 15rpx;
+}
+
+.comment-img-item1 {
+  flex: 1;
+  height: 351rpx;
+}
+
+.comment-img-item2 {
+  flex: 1;
+  height: 175rpx;
+  margin-right: 5rpx;
+}
+
+.comment-img-item3 {
+  flex: 2;
+  height: 234rpx;
+  margin-right: 5rpx;
+}
+
+.comment-img-right {
+  width: 230rpx;
+  display: flex;
+  flex-direction: column;
+  height: 234rpx;
+}
+
+.comment-img-item4 {
+  width: 230rpx;
+  height: 117rpx;
+  margin-bottom: 5rpx;
+}
+
+.img-clear {
+  margin-bottom: 0;
+}
