已发布事件修改

--- a/pages/myPublished/myPublished.wxml
+++ b/pages/myPublished/myPublished.wxml
@@ -1,6 +1,6 @@
 <!--myFollows.wxml-->
 <block  wx:for="{{list}}" wx:key="unique">
-<navigator url="../detail/detail?eventId={{item.eventId}}">
+<navigator url="../eventPublish/eventPublish?eventId={{item.eventId}}">
 <view class="follow_list">
 	<view class="f_img">
 		<view class="icon"></view>
