--- a/pages/myPublished/myPublished.wxss
+++ b/pages/myPublished/myPublished.wxss
@@ -24,6 +24,7 @@
 .follow_list .f_img .img{
     width: 100%;
     max-height: 300rpx;
+    background-color: #666666;
 }
 .follow_list .t1{
     margin-top: 20rpx;
@@ -51,31 +52,6 @@ height:36rpx;
   height: 60rpx;
   line-height: 60rpx;
   margin-top:-20rpx;
-  background: -webkit-linear-gradient(right, #44d3d2, #2acc7b);
-	/* Safari 5.1 - 6.0 */
-	background: -o-linear-gradient(right, #44d3d2, #2acc7b);
-	/* Opera 11.1 - 12.0 */
-	background: -moz-linear-gradient(right, #44d3d2, #2acc7b);
-	/* Firefox 3.6 - 15 */
-	background: linear-gradient(to right, #44d3d2, #2acc7b);
-}
-.f_button button.publishing{
-     background: -webkit-linear-gradient(right, #efd636, #ef8e36);
-	/* Safari 5.1 - 6.0 */
-	background: -o-linear-gradient(right, #efd636, #ef8e36);
-	/* Opera 11.1 - 12.0 */
-	background: -moz-linear-gradient(right, #efd636, #ef8e36);
-	/* Firefox 3.6 - 15 */
-	background: linear-gradient(to right, #efd636, #ef8e36);
-}
-.f_button button.no_publish{
-     background: -webkit-linear-gradient(right, #44d3d2, #c52424);
-	/* Safari 5.1 - 6.0 */
-	background: -o-linear-gradient(right, #fd4748, #c52424);
-	/* Opera 11.1 - 12.0 */
-	background: -moz-linear-gradient(right, #fd4748, #c52424);
-	/* Firefox 3.6 - 15 */
-	background: linear-gradient(to right, #fd4748, #c52424);
 }
 
 .no_event{
@@ -93,4 +69,25 @@ border:none;
 }
 button[disabled] {
 color:#999999;
+}
+
+.status-tag-0 {
+    background-color: #f8b551;
+    color: #ffffff;
+}
+.status-tag-1 {
+    background-color: #00b7ee;
+    color: #ffffff;
+}
+.status-tag-2 {
+    background-color: #2acc7b;
+    color: #ffffff;
+}
+.status-tag-3 {
+    background-color: #898989;
+    color: #ffffff;
+}
+.status-tag-4 {
+    background-color: #898989;
+    color: #ffffff;
 }
