--- a/pages/myPublished/myPublished.wxss
+++ b/pages/myPublished/myPublished.wxss
@@ -46,9 +46,21 @@
 width:30rpx;
 height:36rpx;
 }
+.follow_list .t3{
+/*display: flex;*/
+
+}
+.f_left{
+
+}
+.f_button{
+width:200rpx;
+position:absolute;
+top:20rpx;
+right:0rpx;
+}
 .f_button button{
-  width:180rpx;
-  font-size: 36rpx;
+  width:100%;
   height: 60rpx;
   line-height: 60rpx;
   margin-top:-20rpx;
@@ -60,6 +72,7 @@ height:36rpx;
     
 }
 button{
+border-radius:0 10rpx 0 0;
 font-size:30rpx;
 background-color:#eeeff1;
 color:#666666;
