--- a/pages/myPublished/myPublished.wxml
+++ b/pages/myPublished/myPublished.wxml
@@ -55,6 +55,14 @@ class="no_publish"
 	<view class="f_button fr">
 		<button formType="submit" class="status-tag-{{status}}">{{statusListData[status]}}</button>
 	 </view>
+	 <view class="f_button2" catchtap="toggleHidden" data-eventId="{{eventId}}">
+	 <block wx:if="{{toggle=='0'}}">
+		<button formType="submit" class="status-tag-hidden">隐藏</button>
+	 </block>
+	<block wx:if="{{toggle=='1'}}">
+		<button formType="submit" class="status-tag-show">已展示</button>
+	 </block>
+	 </view>
 </view>
 </template>
 
