--- a/pages/myPublished/myPublished.wxss
+++ b/pages/myPublished/myPublished.wxss
@@ -53,7 +53,13 @@ height:36rpx;
     right: 20rpx;
 }
 
-.f_button button{
+.f_button2 {
+    position: absolute;
+    top: 15rpx;
+    right: 180rpx;
+}
+
+.f_button button,.f_button2 button{
   width:100%;
   height: 60rpx;
   line-height: 60rpx;
@@ -96,5 +102,15 @@ color:#999999;
 }
 .status-tag-4 {
     background-color: #898989;
+    color: #ffffff;
+}
+
+.status-tag-hidden {
+    background-color: #bdb7b7;
+    color: #ffffff;
+}
+
+.status-tag-show {
+    background-color: red;
     color: #ffffff;
 }
