--- a/pages/myPublished/myPublished.wxml
+++ b/pages/myPublished/myPublished.wxml
@@ -48,7 +48,7 @@ class="no_publish"
 	<view class="t1">
 	 	{{name}}
 	</view>
-	<view class="t2"><image src="../../images/d-icon1.png"></image> {{year}}年{{mouth}}月{{date}}号    {{startTime}}</view>
+	<view class="t2"><image src="../../images/d-icon1.png"></image> {{year}}年{{month}}月{{date}}号    {{startTime}}</view>
 	 <view class="t2 t3">
 	 <image src="../../images/d-icon2.png"></image> {{address}}
 	</view>
