--- a/pages/myFollows/myFollows.wxml
+++ b/pages/myFollows/myFollows.wxml
@@ -9,7 +9,7 @@
 	<view class="t1">
 	 	{{item.name}}
 	</view>
-	<view class="t2"><image src="../../images/d-icon1.png"></image> 06月18号    19: 00</view>
+	<view class="t2"><image src="../../images/d-icon1.png"></image> {{item.year}}年{{item.month}}月{{item.date}}号    {{item.startTime}}</view>
 	 <view class="t2 t3">
 	 <image src="../../images/d-icon2.png"></image>{{item.address}}
 	</view>
