--- a/pages/testModuleAdd/testModuleAdd.wxss
+++ b/pages/testModuleAdd/testModuleAdd.wxss
@@ -108,8 +108,7 @@
 }
 
 .question-title {
-    height: 60rpx;
-    line-height: 60rpx;
+    line-height: 1.5;
     font-size: 30rpx;
     color: #2d2e33;
 }
