--- a/pages/timeLine/timeLine.wxml
+++ b/pages/timeLine/timeLine.wxml
@@ -53,7 +53,7 @@
       <view class="events-list-title">{{item.month}}月{{item.date}}日，{{item.dayName}}</view>
       <view class="anchor" id="anchor{{item.date}}"></view>
     </view>
-    <navigator url="../eventPoster/eventPoster?eventId={{item.eventId}}">
+    <navigator url="../detail/detail?eventId={{item.eventId}}">
     <view class="events-list-container">
       <text wx:if="{{item.date == todayDate && item.isFirstEventInDay}}" class="tody">今天</text>
       <view class="events-list-left">{{item.startTime}}</view>
@@ -63,8 +63,8 @@
         <view class="events-member">
         <view class="img-box">
           <view wx:for="{{item.followInfo.avatars}}" wx:key="unique" wx:for-item="a" class="img" style="z-index:99;"><image src="{{a}}"></image></view>
-         </view>
-          <text class="events-member-num">{{item.followInfo.total}}人关注</text>
+        </view>
+        <text class="events-member-num">{{item.followInfo.total}}人关注</text>
         </view>
       </view> 
     </view>
