--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -228,6 +228,7 @@
 	  </view>
   </block>
 </view>
+</template>
 
 <!--底部浮动评论输入框-->
 
@@ -246,7 +247,7 @@
             </view>
         </view>
         <view class="foot-item comment2" bindtap="scrollToComment">
-          <text class="comment_num">{{commentData.data.totalCount}}</text>
+          <text class="comment_num">{{des.commentData.data.totalCount}}</text>
           <image src="../../images/c_icon1.png"></image>
         </view>
         <view class="foot-item comment2 comment3" bindtap="clickFollowEventBtn"> 
@@ -259,7 +260,6 @@
         </view>
         
 </view>
-</template>
 <!--分享-->
 <view class="modal-window" hidden="{{isShowShare}}" bindtap="hiddenShare">
 		<image src="../../images/share.png" />
